# mpctss

./: CMakeLists.txt  README.md
src/: main.c  mpc.c  mpc.h  network.c  network.h
